--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -4,8 +4,7 @@
   <title>Articles</title>
 </head>
 <body>
-  <h1>Create an article</h1>
-
+  <h1>Edit existing article</h1>
   <% if @article.errors.any? %>
     <h2>The followings errors prevented the article from getting created.</h2>
     <ul>
