--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,9 @@
     <title>Pages</title>
   </head>
   <body>
-    <h1>This is the home page.</h1>
-    <%= link_to 'Alpha Blog', articles_path %> | <%= link_to 'About', about_path %>
+    <div class="center jumbotron">
+      <h1>ALPHA BLOG</h1>
+      <%= link_to "Sign up now", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
+    </div>
   </body>
 </html>
