Styled form partial.

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -4,7 +4,7 @@
   <title>Articles</title>
 </head>
 <body>
-  <h1>Edit existing article</h1>
+  <h1 align="center">Edit existing article</h1>
   <%= render 'form' %>
 </body>
 </html>
