--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -4,7 +4,7 @@
   <title>Articles</title>
 </head>
 <body>
-  <h1>Create an article</h1>
+  <h1 align="center">Create an article</h1>
   <%= render 'form' %>
 </body>
 </html>
