--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,6 +41,15 @@ $navbar-default-bg: #000;
   border: 1px solid #000;
 }
 
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 10px;
+}
+
+.description {
+  margin-top: 0;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
