Styled article listing page.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <footer class="footer">
     <small>
-      Copyright &copy; <a href="www.google.com">Whatever</a>
-      by <a href="www.translate.google.com">Whichever</a>
+      Copyright &copy;<a href="www.google.com">Whenever</a>
+      by <a href="www.translate.google.com">Whoever</a>
     </small>
     <nav>
       <ul>
