Added users listing and updated show article view

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,6 +60,11 @@ $navbar-default-bg: #000;
   font-size: 1.5em;
 }
 
+.listing {
+  list-style: none;
+  padding-left: 0;
+}
+
 .article-body {
   border-top: 1px solid #eaeaea;
   padding-top: 15px;
